--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,9 @@
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
 
   "include": ["src"]
