--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm run build --prefix client",
+    "server": "npm run build --prefix server",
+    "deploy": "npm run client && npm run server && npm run start:docker --prefix server"
   },
   "keywords": [],
   "author": "",
